--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
     "react": "^19.0.0",
